crates/toml_edit/tests/snapshots/invalid/inline-table/no-close-01.stderr
TOML parse error at line 1, column 5
  |
1 | a={
  |     ^
unclosed inline table, expected `}`
